# mysql-performance-testing-edp

./: .gitignore  README.md  pyproject.toml
myapi/data_push/: models.py  serializers.py  urls.py  views.py
myapi/data_push/data/: devices_small.csv
myapi/data_push/migrations/: 0001_initial.py  0002_alter_data_table.py  0003_remove_data_name_remove_data_value_data_email_and_more.py  0004_device_delete_data.py
myapi/data_push/views/: get_devices.py  post_devices.py
myapi/myapi/: settings.py  urls.py
